--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+                                                    
 
     <application
       android:name=".MainApplication"
@@ -26,5 +28,6 @@
      android:name="com.google.android.geo.API_KEY"
      android:value="AIzaSyC9A7hctZDD2opDKbwOLIw__6LpchVJUYI"/>
     </application>
+  
 
 </manifest>
