--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.6.3",
     "react-native": "0.58.6",
     "react-native-maps": "^0.23.0",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "2.18.2"
   },
   "devDependencies": {
